--- a/nginx_install.yml
+++ b/nginx_install.yml
@@ -1,6 +1,7 @@
 ---
 - hosts: all
   become: true
+  become_user: root
   tasks:
     - name: ensure nginx is at the latest version
       apt: name=nginx state=latest
